--- a/styles/main.css
+++ b/styles/main.css
@@ -298,7 +298,7 @@ a {
 #about #about-blocks .about-block {
   position: relative;
   padding: 1em;
-  border: 2px solid rgba(16, 16, 16, 0.1);
+  border: 2px solid rgba(16, 16, 16, 0.08);
   border-radius: 4px;
 }
 
@@ -379,7 +379,6 @@ a {
 
 #projects #project-grid .project-tile {
   position: relative;
-  border-radius: 4px;
   height: 400px;
   min-height: 400px;
   -webkit-transition: -webkit-transform 1000ms, -webkit-box-shadow 1000ms;
@@ -387,6 +386,7 @@ a {
   transition: transform 1000ms, box-shadow 1000ms;
   transition: transform 1000ms, box-shadow 1000ms, -webkit-transform 1000ms, -webkit-box-shadow 1000ms;
   will-change: transform;
+  border-radius: 30px;
 }
 
 #projects #project-grid .project-tile .project-text {
@@ -395,7 +395,7 @@ a {
   padding: 0 1.5em 1.5em;
   position: relative;
   color: #dddddd;
-  background-color: rgba(16, 16, 16, 0.1);
+  background-color: rgba(16, 16, 16, 0.6);
 }
 
 #projects #project-grid .project-tile .project-text .project-header {
@@ -431,23 +431,21 @@ a {
   visibility: visible;
 }
 
-#projects #project-grid .project-tile .page-link {
+#projects #project-grid .project-tile .project-img-container {
   width: 50%;
   height: 100%;
   position: relative;
 }
 
-#projects #project-grid .project-tile .page-link .project-img {
+#projects #project-grid .project-tile .project-img-container .project-img {
   min-height: 100%;
   max-height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-filter: brightness(90%);
-          filter: brightness(90%);
 }
 
-#projects #project-grid .project-tile .page-link:hover .tooltip {
+#projects #project-grid .project-tile .project-img-container:hover .tooltip {
   visibility: visible;
 }
 
@@ -464,10 +462,15 @@ a {
 
 #projects #project-grid .project-tile.tile-even .project-text {
   float: right;
+  border-radius: 0 30px 30px 0;
 }
 
 #projects #project-grid .project-tile.tile-even .project-img-container {
   float: left;
+}
+
+#projects #project-grid .project-tile.tile-even .project-img-container .project-img {
+  border-radius: 30px 0 0 30px;
 }
 
 #projects #project-grid .project-tile.tile-even .tech-badge {
@@ -487,10 +490,15 @@ a {
 
 #projects #project-grid .project-tile.tile-odd .project-text {
   float: left;
+  border-radius: 30px 0 0 30px;
 }
 
 #projects #project-grid .project-tile.tile-odd .project-img-container {
   float: right;
+}
+
+#projects #project-grid .project-tile.tile-odd .project-img-container .project-img {
+  border-radius: 0 30px 30px 0;
 }
 
 #projects #project-grid .project-tile.tile-odd .tech-badge {
@@ -575,7 +583,7 @@ a {
   border-radius: 6px;
   text-align: center;
   font-size: 1.1em;
-  background-color: rgba(16, 16, 16, 0.1);
+  background-color: rgba(16, 16, 16, 0.6);
   color: #dddddd;
   opacity: 0.9;
   visibility: hidden;
@@ -757,14 +765,17 @@ a {
   }
   #projects #project-grid .project-tile .project-img-container {
     width: 100%;
-    min-height: 300px;
-    max-height: 300px;
+    height: 300px;
+  }
+  #projects #project-grid .project-tile .project-img-container .project-img {
+    border-radius: 30px 30px 0 0 !important;
   }
   #projects #project-grid .project-tile .project-text {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
     width: 100%;
+    border-radius: 0 0 30px 30px !important;
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
