--- a/styles/sections/_about.scss
+++ b/styles/sections/_about.scss
@@ -26,7 +26,7 @@
       $header-font-size: calc(1.4em + 0.6vw);
       position: relative;
       padding: 1em;
-      border: 2px solid $clr-dark-translucent;
+      border: 2px solid $clr-dark-translucent-2;
       border-radius: 4px;
 
       .block-header {
